fixed the z-index layout

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -16,6 +16,30 @@
     text-align: center;
 }
 
+.content{
+  width: 100%;
+
+  background-position: 50% 50%;
+  position: relative;
+
+  left: 0;
+  opacity: 1;
+}
+
+.hero-content{
+position: fixed;
+z-index: 0;
+
+}
+
+.anchor{
+
+  
+  width: 100%;
+  height: 100vh;
+}
+
+
 .hollow-arrow {
     width: 100%;
     height: 40px;
@@ -34,7 +58,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1; /* Behind the content */
+    z-index: -9; /* Behind the content */
     pointer-events: none; /* Ensure it doesn't interfere with user interactions */
     animation: aurora-borealis 8s linear infinite;
     background-size: 200% 200%;
